Informacija o "spasenim" pozivima

--- a/demo-resilience4j/src/main/resources/application.yaml
+++ b/demo-resilience4j/src/main/resources/application.yaml
@@ -1,23 +1,15 @@
 spring:
   application:
     name: demo-resilience4j
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 
 consumer:
   url: "http://localhost:3000"
 
 resilience4j:
-  retry:
-    retry-aspect-order: 2
-    instances:
-      paymentRetry:
-        maxAttempts: 3
-        waitDuration: 500ms
-        retryExceptions:
-          - java.io.IOException
-          - org.springframework.web.client.RestClientException
-
   circuitbreaker:
-    circuit-breaker-aspect-order: 1
     instances:
       paymentCB:
         automatic-transition-from-open-to-half-open-enabled: true
